implemented data migration for graph placements